change domain structure to DTO pattern, SignUp User refactoring, added updated_at column to user migration
