# docs/swagger.json
@@ -21,8 +21,8 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Create",
-                "operationId": "create",
+                "summary": "Sign Up",
+                "operationId": "signup",
                 "parameters": [
                     {
                         "description": "To register a new user email and password should be provided",
@@ -35,8 +35,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/domain.CreateUserResponse"
                         }
@@ -51,6 +51,12 @@
                         "description": "Unprocessable Entity",
                         "schema": {
                             "$ref": "#/definitions/v1.validationErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.messageResponse"
                         }
                     }
                 }
@@ -89,7 +95,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "204": {
                         "description": ""
                     },
                     "400": {
@@ -107,7 +113,7 @@
                 }
             }
         },
-        "/users/{id}/archive": {
+        "/users/{id}/state": {
             "patch": {
                 "description": "Update user state",
                 "consumes": [
@@ -119,8 +125,8 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Archive",
-                "operationId": "archive",
+                "summary": "Update state",
+                "operationId": "state",
                 "parameters": [
                     {
                         "type": "integer",
@@ -135,12 +141,12 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.ArchiveUserRequest"
+                            "$ref": "#/definitions/domain.UpdateStateUserRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "204": {
                         "description": ""
                     },
                     "400": {
@@ -154,18 +160,6 @@
         }
     },
     "definitions": {
-        "domain.ArchiveUserRequest": {
-            "type": "object",
-            "required": [
-                "is_active"
-            ],
-            "properties": {
-                "is_active": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
         "domain.CreateUserRequest": {
             "type": "object",
             "required": [
@@ -173,6 +167,10 @@
                 "password"
             ],
             "properties": {
+                "confirm_password": {
+                    "type": "string",
+                    "example": "secret"
+                },
                 "email": {
                     "type": "string",
                     "example": "user@mail.com"
@@ -199,8 +197,25 @@
                 }
             }
         },
+        "domain.UpdateStateUserRequest": {
+            "type": "object",
+            "required": [
+                "is_active"
+            ],
+            "properties": {
+                "is_active": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
         "domain.UpdateUserRequest": {
             "type": "object",
+            "required": [
+                "first_name",
+                "last_name",
+                "username"
+            ],
             "properties": {
                 "first_name": {
                     "type": "string",
@@ -234,7 +249,7 @@
                         "type": "string"
                     },
                     "example": {
-                        "password": "must be at least 6 characters in length"
+                        "CreateUserRequest.ConfirmPassword": "must be equal to Password"
                     }
                 }
             }
