# internal/delivery/http/v1/error.go
@@ -1,12 +1,9 @@
 package v1
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 
 	"github.com/ysomad/go-auth-service/pkg/logger"
-	"github.com/ysomad/go-auth-service/pkg/validator"
 )
 
 type messageResponse struct {
@@ -14,7 +11,7 @@ type messageResponse struct {
 }
 
 type validationErrorResponse struct {
-	Errors map[string]string `json:"error" example:"password:must be at least 6 characters in length"`
+	Errors map[string]string `json:"error" example:"CreateUserRequest.ConfirmPassword:must be equal to Password"`
 }
 
 func logError(c *gin.Context, code int, err error, msg string) {
@@ -35,21 +32,4 @@ func abortWithError(c *gin.Context, code int, err error) {
 func abortWithValidationError(c *gin.Context, code int, err error, errs map[string]string) {
 	logError(c, code, err, "http - v1 - abortWithValidationError")
 	c.AbortWithStatusJSON(code, validationErrorResponse{errs})
-}
-
-func validStruct(c *gin.Context, s interface{}) bool {
-	v := validator.New()
-
-	if err := v.ValidateStruct(s); err != nil {
-		translatedErrs, translateErr := v.TranslateAll(err)
-		if translateErr != nil {
-			abortWithError(c, http.StatusBadRequest, translateErr)
-			return false
-		}
-
-		abortWithValidationError(c, http.StatusUnprocessableEntity, err, v.Fmt(translatedErrs))
-		return false
-	}
-
-	return true
 }
